# stats_practice

./: README.md  hello.py  pyproject.toml
bayes/: chapter_01.ipynb  chapter_02.ipynb  chapter_03.ipynb  chapter_04.ipynb  chapter_05.ipynb  chapter_06.ipynb  chapter_07.ipynb  chapter_08.ipynb  exercises_01.ipynb  exercises_02.ipynb  exercises_03.ipynb  exercises_04.ipynb  exercises_05.ipynb  exercises_06.ipynb  exercises_07.ipynb  exercises_08.ipynb  readme.md  utils.py
bayes/sims/: exploration.ipynb  sim.py
