[project]
name = "statistics-work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "empiricaldist>=0.8.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "scipy>=1.15.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
